Fix combobox dropdown cut off in popup on small screens

--- a/resources/css/components/_forms.scss
+++ b/resources/css/components/_forms.scss
@@ -232,7 +232,7 @@
   position: absolute;
   width: 100%;
   height: auto;
-  max-height: 50vh;
+  max-height: 35vh;
   overflow-y: auto;
   overflow-x: hidden;
   border: design.app-value('input-field-border') solid design.app-color('input-field-border-color');
