--- a/resources/css/design/_common.scss
+++ b/resources/css/design/_common.scss
@@ -72,8 +72,7 @@ $value-map: (
   popup-border: .125rem,
   popup-box-shadow: 1rem,
   input-field-padding: (
-    default: .25rem,
-    md: .35rem,
+    default: .4rem,
     lg: .5rem,
     xl: .75rem,
   ),
